added commments to the model part

--- a/1.0-Unet-Engineering.ipynb
+++ b/1.0-Unet-Engineering.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook is orginal from Boggis30 named 'SpaceNetUnet'. URL: https://github.com/boggis30/SpaceNetUnet\n",
+    "I added some comments to better understand the code \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "o121byEiFEkg"
@@ -23,15 +32,6 @@
     "#If you are running the notebook in Colab it is necessary to toggle tensorflow 2.0 behaviour and load tennsorboard extension\n",
     "%tensorflow_version 2.x\n",
     "%load_ext tensorboard"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This notebook is orginal from Boggis30 named 'SpaceNetUnet'. URL: https://github.com/boggis30/SpaceNetUnet\n",
-    "I added some comments to better understand the code \n",
-    "\n"
    ]
   },
   {
@@ -151,6 +151,13 @@
    },
    "source": [
     "# Data Generators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generate Data to feed the UNet with !"
    ]
   },
   {
@@ -457,34 +464,35 @@
    "outputs": [],
    "source": [
     "def reduce_layer(n_classes):\n",
-    "  \"\"\"The idea of this layer is the foollwing:\n",
+    "  \"\"\"The idea of this layer is the following:\n",
     "  Original Unet has final conv layer with three filters. \n",
     "  Each filter has to be able to distinguish target class on the final feature map.\n",
     "  Each filter has capacity of only 65 parameters, which might be insufficient.\n",
-    "  Improoved Unet has increased number of filters per class in final conv layer.\n",
+    "  Improved Unet has increased number of filters per class in final conv layer.\n",
     "  There are three groups of filters as per each class. Filters corresponding to \n",
     "  one classes are summed in the final layer before activation. \n",
     "  \"\"\"\n",
     "  \n",
     "  def _reduce_layer(x):\n",
     "\n",
-    "    n_channel = x.shape[-1]\n",
+    "    n_channel = x.shape[-1] #take the number in last dimension/axis, corresponds with number of channels\n",
     "        \n",
-    "    # n_channel must be devisible by n_classes\n",
-    "    assert n_channel % n_classes == 0\n",
+    "    # n_channel must be divisible by n_classes\n",
+    "    assert n_channel % n_classes == 0 # % gives remainder of division, so if you divide n_channel by n_classes it should be 0\n",
+    "    # assert here means: check this condition and immediately trigger an error if the condition is false\n",
     "\n",
     "    ch1 = int(n_channel/n_classes)\n",
     "    ch2 = int(2*n_channel/n_classes)\n",
     "    \n",
-    "    x1 = x[...,:ch1]\n",
-    "    x2 = x[...,ch1:ch2]\n",
-    "    x3 = x[...,ch2:n_channel]\n",
+    "    x1 = x[...,:ch1] #last dimension = n_channels/n_classes\n",
+    "    x2 = x[...,ch1:ch2] # last dimension ch1-ch2\n",
+    "    x3 = x[...,ch2:n_channel] \n",
     "\n",
-    "    x1 = K.sum(x1,axis=-1)\n",
-    "    x2 = K.sum(x2,axis=-1)\n",
+    "    x1 = K.sum(x1,axis=-1) # sum of the values in a tensor, alongside the specified axis (axis = dimension)\n",
+    "    x2 = K.sum(x2,axis=-1) # here axis is e.g. (x,x,X), always the last one\n",
     "    x3 = K.sum(x3,axis=-1)\n",
     "\n",
-    "    y = K.stack([x1,x2,x3],axis=-1)\n",
+    "    y = K.stack([x1,x2,x3],axis=-1) #Stacks a list of rank R tensors into a rank R+1 tensor\n",
     "\n",
     "    return y\n",
     "\n",
@@ -497,7 +505,8 @@
     "    if batch_norm:\n",
     "  \n",
     "      x = keras.layers.Conv2D(n_filter, (3,3),padding='same')(x)\n",
-    "      x = keras.layers.BatchNormalization()(x)\n",
+    "    #Batch normalization applies a transformation that maintains the mean output close to 0 and the output standard deviation close to 1.\n",
+    "      x = keras.layers.BatchNormalization()(x) \n",
     "      x = keras.layers.ReLU()(x)\n",
     "    \n",
     "    else:  \n",
@@ -509,7 +518,8 @@
     "\n",
     "  return _conv_block\n",
     "\n",
-    "def unetConv2(n_filter,double_conv=True,batch_norm=True):\n",
+    "def unetConv2(n_filter,double_conv=True,batch_norm=True): #decide if you want to do either singular or double conv\n",
+    "    # going down the U\n",
     "  \n",
     "  def _unetConv2(x):\n",
     "    \n",
@@ -526,17 +536,18 @@
     "\n",
     "  return _unetConv2\n",
     "\n",
-    "def unetUp(n_filter,deconv=True):\n",
+    "def unetUp(n_filter,deconv=True): # going up the U, deconvolution means decoding \n",
     "\n",
     "  def _unetUp(input1,input2):\n",
     "\n",
     "    if deconv:\n",
     "\n",
-    "      input2 = keras.layers.Conv2DTranspose(n_filter,(2,2),(2,2))(input2)\n",
+    "      input2 = keras.layers.Conv2DTranspose(n_filter,(2,2),(2,2))(input2) # convolutional operation, will also upsample but\n",
+    "    # key difference to UpSampling is taht the model should learn what is the best upsampling for the job\n",
     "          \n",
     "    else:\n",
     "      \n",
-    "      input2 = keras.layers.UpSampling2D(size=(2,2))(input2)\n",
+    "      input2 = keras.layers.UpSampling2D(size=(2,2))(input2) # Simple upscaling of the image using nearest neighbour or bilinear upsampling. \n",
     "\n",
     "    x = keras.layers.Concatenate()([input1,input2])\n",
     "\n",
