--- a/1.0-Unet-Engineering.ipynb
+++ b/1.0-Unet-Engineering.ipynb
@@ -588,16 +588,16 @@
     "\n",
     "  if final_reduce:\n",
     "\n",
-    "    final = keras.layers.Conv2D(final_reduce_n_channel,(1,1)) (up_concat1)\n",
-    "    final = keras.layers.Lambda(reduce_layer(n_classes)) (final)\n",
+    "    final = keras.layers.Conv2D(final_reduce_n_channel,(1,1)) (up_concat1) #first convolute to size 1,1\n",
+    "    final = keras.layers.Lambda(reduce_layer(n_classes)) (final) # call the function reduce_layer to be performed on the last layer\n",
     "\n",
-    "  else:\n",
+    "  else: # if we do not want to reduce the final layer, we only convolute\n",
     "\n",
     "    final = keras.layers.Conv2D(n_classes,(1,1)) (up_concat1)\n",
     "\n",
-    "  final_softmax = keras.activations.softmax(final, axis=-1)\n",
+    "  final_softmax = keras.activations.softmax(final, axis=-1) # converts a vector of values to a probability distribution\n",
     "\n",
-    "  model  = keras.Model(x,final_softmax)  \n",
+    "  model  = keras.Model(x,final_softmax)  # instantiate (erzeugen) the model\n",
     "\n",
     "  return model"
    ]
@@ -632,8 +632,9 @@
    },
    "outputs": [],
    "source": [
-    "model_base_line = unetModel(final_reduce=False)\n",
+    "model_base_line = unetModel(final_reduce=False) # NOTE: final_reduce = FALSE, no reduction layer\n",
     "\n",
+    "# compile params are the same for baseline and improved\n",
     "model_base_line.compile(optimizer='adam',metrics = ['sparse_categorical_accuracy'],loss= 'sparse_categorical_crossentropy')"
    ]
   },
@@ -692,22 +693,22 @@
    ],
    "source": [
     "%%time\n",
-    "logdir = 'log_dir/base_line/0'\n",
+    "logdir = 'log_dir/base_line/0' #defines the path name of the director to which system execution lgs are to be output\n",
     "\n",
-    "os.makedirs(logdir,exist_ok=True)\n",
+    "os.makedirs(logdir,exist_ok=True) # make the directory, if already exists leaves unaltered\n",
     "\n",
     "\n",
     "callbacks = [keras.callbacks.TensorBoard(log_dir=logdir,\n",
     "                                        histogram_freq=1,\n",
     "                                        update_freq = 'epoch',                                     \n",
     "                                        write_graph=True\n",
-    "                                        )]\n",
+    "                                        )] # write TensorBoard logs after very batch of training [epoch]to monitor metrics\n",
     "                                        \n",
     "\n",
-    "history_base_line = model_base_line.fit_generator(train_gen, \n",
-    "                              steps_per_epoch=25, \n",
+    "history_base_line = model_base_line.fit_generator(train_gen, # fit_generator will be deprecated, better use fit()\n",
+    "                              steps_per_epoch=25, # total number of steps (batches of samples) before declaring that one epoch finished\n",
     "                              epochs=10,\n",
-    "                              verbose=1, \n",
+    "                              verbose=1, # verbosity mode = progress bar \n",
     "                              validation_data=val_gen,\n",
     "                              validation_steps=19,\n",
     "                              callbacks=callbacks)"
@@ -735,16 +736,16 @@
    "source": [
     "def validate_image(img,mask,model):\n",
     "\n",
-    "    mask_pred = model.predict(img)\n",
+    "    mask_pred = model.predict(img) # generates output predictions for the input samples.\n",
     "\n",
     "    i=0\n",
     "    img = img[i].astype(int)\n",
-    "    mask = np.squeeze(mask[i].astype(int))\n",
-    "    mask_pred = np.squeeze(mask_pred[i])\n",
-    "    mask_pred_rend = np.argmax(mask_pred,axis=-1)\n",
+    "    mask = np.squeeze(mask[i].astype(int)) # reduce by one axis\n",
+    "    mask_pred = np.squeeze(mask_pred[i]) # reduce again by one axis\n",
+    "    mask_pred_rend = np.argmax(mask_pred,axis=-1) # Returns the indices of the maximum values along an axis.\n",
     "\n",
     "    plt.figure(figsize=0.8*np.array([4*6.4, 4.8]))\n",
-    "    plt.subplot(141)\n",
+    "    plt.subplot(141) # = plt.subplot(1,4,1), 1 row, 4 columns,  first subplot (from right to left, first top row)\n",
     "    plt.imshow(img)\n",
     "    plt.subplot(142)\n",
     "    plt.imshow(mask)\n",
@@ -756,20 +757,20 @@
     "    \n",
     "    return mask_pred, mask_pred_rend\n",
     "\n",
-    "def plot_history(history_dict):\n",
+    "def plot_history(history_dict): # I want two plots with almost the same params, so I make a function\n",
     "\n",
-    "  metrics = ['loss', 'sparse_categorical_accuracy']\n",
-    "  val_metrics = ['val_los', 'val_sparse_categorical_accuracy']\n",
+    "  metrics = ['loss', 'sparse_categorical_accuracy'] # training metrics I want to plot (y-axis - names)\n",
+    "  val_metrics = ['val_los', 'val_sparse_categorical_accuracy'] # validation metrics \n",
     "\n",
     "\n",
     "  epochs = range(1, len(history_dict['loss']) + 1)\n",
     "\n",
     "  plt.figure(figsize=0.8*np.array([6*6.4, 4.8]))\n",
     "  \n",
-    "  for i,metric in enumerate(metrics):\n",
+    "  for i,metric in enumerate(metrics): # enumerate: Loop over something and have an automatic counter \n",
     "    plt.subplot(141+i)    \n",
-    "    plt.plot(epochs, history_dict[metric], 'bo', label='Training ' + metric)\n",
-    "    plt.plot(epochs, history_dict['val_' + metric], 'b', label='Validation' + metric)\n",
+    "    plt.plot(epochs, history_dict[metric], 'bo', label='Training ' + metric) # x-axis, y-axis, blue circle markers, label)\n",
+    "    plt.plot(epochs, history_dict['val_' + metric], 'b', label='Validation' + metric) # same as above but with validation, line\n",
     "    plt.title('Training and validation ' + metric)\n",
     "    plt.xlabel('Epochs')\n",
     "    plt.ylabel(metric)\n",
@@ -854,7 +855,7 @@
     }
    ],
    "source": [
-    "val_image_gen   = make_gen4unet(df_val,batch_size=1,seed=12)\n",
+    "val_image_gen   = make_gen4unet(df_val,batch_size=1,seed=12) # make generator for validation images\n",
     "\n",
     "img_val,mask_val = next(val_image_gen)"
    ]
@@ -897,7 +898,8 @@
     }
    ],
    "source": [
-    "_ = validate_image(img_val,mask_val,model_base_line)"
+    "_ = validate_image(img_val,mask_val,model_base_line) # _ throwaway variable? \n",
+    "# 1: img  2: mask  3: mask_prediction  4: mask_pred_rend (argmax, returns indices of max values along an axis)"
    ]
   },
   {
@@ -931,21 +933,28 @@
    },
    "outputs": [],
    "source": [
-    "def get_event_file(log_dir):\n",
+    "def get_event_file(log_dir): # this function gets the log-file from the before set log-dir\n",
     "  event_files = glob.glob(os.path.join(log_dir,'train','*v2'))\n",
     "  return event_files[0] \n",
     "\n",
     "def get_events_of_tensor(event_file,tensor_name):\n",
     "\n",
-    "  events = []\n",
-    "  for e in tf.compat.v1.train.summary_iterator(event_file):\n",
+    "  events = [] # list of events\n",
+    "  for e in tf.compat.v1.train.summary_iterator(event_file): \n",
+    "    # Returns a iterator for reading Event protocol buffers from an event file. \n",
+    "    # You can use this function to read events written to an event file\n",
     "    events.append(e)\n",
     "    \n",
     "  events_of_tensor = []\n",
     "  \n",
-    "  for e in events:\n",
+    "  for e in events: \n",
     "    if len(e.summary.value)>0:      \n",
-    "      if re.compile('.*{}$'.format(tensor_name)).match(e.summary.value[0].tag):                   \n",
+    "      if re.compile('.*{}$'.format(tensor_name)).match(e.summary.value[0].tag):   \n",
+    "        # .compile = Compile a regular expression pattern into a regular expression object, which can be used for matching using its match(), search() and other methods, described below.\n",
+    "        # . = This matches any character except a newline  \n",
+    "        # * = Causes the resulting RE to match 0 \n",
+    "        # {m} = exactly m copies of the previous RE should be matched\n",
+    "        # $ = Matches the end of the string or just before the newline at the end of the string\n",
     "        events_of_tensor.append(e)\n",
     "\n",
     "  print('Found {} events of tensor {}'.format(len(events_of_tensor),tensor_name))\n",
