commenting the Improved model

--- a/1.0-Unet-Engineering.ipynb
+++ b/1.0-Unet-Engineering.ipynb
@@ -5,7 +5,29 @@
    "metadata": {},
    "source": [
     "This notebook is orginal from Boggis30 named 'SpaceNetUnet'. URL: https://github.com/boggis30/SpaceNetUnet\n",
-    "I added some comments to better understand the code \n",
+    "I added some comments to better understand the code "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary of  the Notebook: \n",
+    "This code executes building detection with the help of an U-Net-like architecture. \n",
+    "By additionally reducing the final layer, the models' accuracy increases (improved model). \n",
+    "\n",
+    "Model: \n",
+    "- Conv2D; (Batch Normalization); ReLu; double convolution possible\n",
+    "- Maxpooling \n",
+    "\n",
+    "- UNetUp: Conv2DTranspose + Concatenate\n",
+    "\n",
+    "- final_reduce = False: Conv2D\n",
+    "- final_reduce = True: Conv2D, Lambda(reduce_layer)\n",
+    "\n",
+    "Lastly, explore the filters with Hyperopt ---> best results?!\n",
+    "\n",
+    "Thought and ideas on improving the code or comparing with other applications: \n",
     "\n"
    ]
   },
@@ -543,7 +565,7 @@
     "    if deconv:\n",
     "\n",
     "      input2 = keras.layers.Conv2DTranspose(n_filter,(2,2),(2,2))(input2) # convolutional operation, will also upsample but\n",
-    "    # key difference to UpSampling is taht the model should learn what is the best upsampling for the job\n",
+    "    # key difference to UpSampling is that the model should learn what is the best upsampling for the job\n",
     "          \n",
     "    else:\n",
     "      \n",
@@ -933,13 +955,13 @@
    },
    "outputs": [],
    "source": [
-    "def get_event_file(log_dir): # this function gets the log-file from the before set log-dir\n",
+    "def get_event_file(log_dir): # this function gets the log-file from the prevoius set log-dir\n",
     "  event_files = glob.glob(os.path.join(log_dir,'train','*v2'))\n",
     "  return event_files[0] \n",
     "\n",
-    "def get_events_of_tensor(event_file,tensor_name):\n",
+    "def get_events_of_tensor(event_file,tensor_name): # this functon generates a list of the events of the tensors\n",
     "\n",
-    "  events = [] # list of events\n",
+    "  events = [] # list of iterators to read event file\n",
     "  for e in tf.compat.v1.train.summary_iterator(event_file): \n",
     "    # Returns a iterator for reading Event protocol buffers from an event file. \n",
     "    # You can use this function to read events written to an event file\n",
@@ -949,39 +971,42 @@
     "  \n",
     "  for e in events: \n",
     "    if len(e.summary.value)>0:      \n",
-    "      if re.compile('.*{}$'.format(tensor_name)).match(e.summary.value[0].tag):   \n",
+    "      if re.compile('.*{}$'.format(tensor_name)).match(e.summary.value[0].tag): # here the error/warning about deprecation  \n",
+    "        # RE = a regular expression specifies a set of strings taht matches it\n",
     "        # .compile = Compile a regular expression pattern into a regular expression object, which can be used for matching using its match(), search() and other methods, described below.\n",
     "        # . = This matches any character except a newline  \n",
-    "        # * = Causes the resulting RE to match 0 \n",
+    "        # * = Causes the resulting RE to match 0 or more repetitions of the preceding RE\n",
     "        # {m} = exactly m copies of the previous RE should be matched\n",
     "        # $ = Matches the end of the string or just before the newline at the end of the string\n",
-    "        events_of_tensor.append(e)\n",
+    "        # .match = If zero or more characters at the beginning of string match this regular expression, return a corresponding match object.\n",
+    "        # .tag = ?\n",
+    "        events_of_tensor.append(e) # list of events \n",
     "\n",
     "  print('Found {} events of tensor {}'.format(len(events_of_tensor),tensor_name))\n",
     "\n",
     "  return events_of_tensor\n",
     "\n",
-    "def get_coef_histogram(events_of_tensor):\n",
+    "def get_coef_histogram(events_of_tensor): # this function defines the variable coef_hist with its' params\n",
     "\n",
     "  coef_hist = []\n",
     "\n",
     "  for e in events_of_tensor:\n",
     "\n",
-    "    bucket_limit = np.array(e.summary.value[0].histo.bucket_limit)\n",
+    "    bucket_limit = np.array(e.summary.value[0].histo.bucket_limit) #if here is an error look for histo\n",
     "    bucket = np.array(e.summary.value[0].histo.bucket)\n",
     "    \n",
     "    bucket_limit[-1] = bucket_limit[-2] + bucket_limit[-2] - bucket_limit[-3]\n",
     "    \n",
-    "    bucket_limit,bucket = smooth_hist(bucket_limit,bucket)\n",
+    "    bucket_limit,bucket = smooth_hist(bucket_limit,bucket) # this function gets defined later - error? \n",
     "\n",
-    "    bucket_limit = np.insert(bucket_limit,0,bucket_limit[0] - bucket_limit[1]+bucket_limit[0])\n",
+    "    bucket_limit = np.insert(bucket_limit,0,bucket_limit[0] - bucket_limit[1]+bucket_limit[0]) # (arr,obj,input values)\n",
     "    bucket = np.insert(bucket,0,0)\n",
     "    \n",
     "    coef_hist.append(np.stack([bucket_limit,bucket],axis=1))\n",
     "\n",
     "  return np.stack(coef_hist)\n",
     "\n",
-    "def smooth_hist(bins,bins_val):\n",
+    "def smooth_hist(bins,bins_val): # this function \n",
     "\n",
     "  bins = np.array(bins)\n",
     "  bins_val = np.array(bins_val)\n",
@@ -1002,7 +1027,7 @@
     "\n",
     "  return new_bins,np.array(new_bins_val)\n",
     "\n",
-    "def draw_coef_hist(coef_hist,ax):\n",
+    "def draw_coef_hist(coef_hist,ax): # this function sets the params to draw the coefficient histogram per epoch in a 3d graph\n",
     "\n",
     "  epochs = len(coef_hist)\n",
     "\n",
@@ -1024,11 +1049,11 @@
     "\n",
     "  z_max = coef_hist[:,:,1].max()\n",
     "\n",
-    "  ax.set_xlabel('X')\n",
+    "  ax.set_xlabel('X') # X = value(coefficient)\n",
     "  ax.set_xlim3d(x_min, x_max)\n",
-    "  ax.set_ylabel('EPOCH NUM')\n",
+    "  ax.set_ylabel('EPOCH NUM') # Y = epochs\n",
     "  ax.set_ylim3d(0, epochs)\n",
-    "  ax.set_zlabel('Z')\n",
+    "  ax.set_zlabel('Z') # Z = number of observations\n",
     "  ax.set_zlim3d(0, z_max)\n",
     "  \n",
     "  return"
@@ -1086,6 +1111,8 @@
     }
    ],
    "source": [
+    "# Display the Coefficient Histogram (run the functions from above)\n",
+    "\n",
     "log_dir = 'log_dir/base_line/0'\n",
     "event_file = get_event_file(log_dir)\n",
     "\n",
@@ -1138,7 +1165,7 @@
     "id": "HOAlbIen-GbC"
    },
    "source": [
-    "# Improoved Unet"
+    "# Improved Unet"
    ]
   },
   {
@@ -1148,7 +1175,7 @@
     "id": "lLjVjXTm-ZyI"
    },
    "source": [
-    "## Improoved Unet Training"
+    "## Improved Unet Training"
    ]
   },
   {
@@ -1161,9 +1188,10 @@
    },
    "outputs": [],
    "source": [
-    "model_improoved = unetModel(final_reduce=True, final_reduce_n_channel=30)\n",
+    "model_improved = unetModel(final_reduce=True, final_reduce_n_channel=30) \n",
+    "# take the same model, but this time final_reduce = TRUE !\n",
     "\n",
-    "model_improoved.compile(optimizer='adam',metrics = ['sparse_categorical_accuracy'],loss= 'sparse_categorical_crossentropy')"
+    "model_improved.compile(optimizer='adam',metrics = ['sparse_categorical_accuracy'],loss= 'sparse_categorical_crossentropy')"
    ]
   },
   {
@@ -1221,7 +1249,7 @@
    ],
    "source": [
     "%%time\n",
-    "logdir = 'log_dir/improoved/0'\n",
+    "logdir = 'log_dir/improved/0'\n",
     "\n",
     "os.makedirs(logdir,exist_ok=True)\n",
     "\n",
@@ -1233,7 +1261,7 @@
     "                                        )]\n",
     "                                        \n",
     "\n",
-    "history_model_improoved = model_improoved.fit_generator(train_gen, \n",
+    "history_model_improved = model_improved.fit_generator(train_gen, \n",
     "                              steps_per_epoch=25, \n",
     "                              epochs=10,\n",
     "                              verbose=1, \n",
@@ -1249,7 +1277,7 @@
     "id": "lmCXPWu4_Hhw"
    },
    "source": [
-    "## Improoved Unet Validation"
+    "## Improved Unet Validation"
    ]
   },
   {
@@ -1290,7 +1318,7 @@
     }
    ],
    "source": [
-    "plot_history(history_model_improoved.history)"
+    "plot_history(history_model_improved.history)"
    ]
   },
   {
@@ -1331,7 +1359,8 @@
     }
    ],
    "source": [
-    "_ = validate_image(img_val,mask_val,model_base_line)"
+    "_ = validate_image(img_val,mask_val,model_base_line)\n",
+    "# 1: img  2: mask  3: mask_prediction base_line_model  4: mask_pred_rend base_line_model "
    ]
   },
   {
@@ -1372,7 +1401,8 @@
     }
    ],
    "source": [
-    "_ = validate_image(img_val,mask_val,model_improoved)"
+    "_ = validate_image(img_val,mask_val,model_improved)\n",
+    "# 1: img  2: mask  3: mask_prediction improved_model  4: mask_pred_rend improved_model "
    ]
   },
   {
@@ -1382,7 +1412,7 @@
     "id": "9Pqj_O45_IZG"
    },
    "source": [
-    "## Improoved Unet Analysis"
+    "## Improved Unet Analysis"
    ]
   },
   {
@@ -1433,7 +1463,7 @@
     }
    ],
    "source": [
-    "log_dir = 'log_dir/improoved/0'\n",
+    "log_dir = 'log_dir/improved/0'\n",
     "event_file = get_event_file(log_dir)\n",
     "\n",
     "fig = plt.figure(figsize=1.5*np.array([2*6.4, 2*4.8]))\n",
@@ -1496,7 +1526,20 @@
     "id": "L6QjKbl1Dr2x"
    },
    "source": [
-    "## Exploration of filter number with Hyperopt"
+    "## Exploration of filter number with Hyperopt\n",
+    "*Distributed Asynchronous Hyper-parameter Optimization*\n",
+    "\n",
+    "Hyperopt's job is to find the best value of a scalar-valued, possibly-stochastic function over a set of possible arguments to that function. Whereas many optimization packages will assume that these inputs are drawn from a vector space, Hyperopt is different in that it encourages you to describe your search space in more detail. By providing more information about where your function is defined, and where you think the best values are, you allow algorithms in hyperopt to search more efficiently."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First time *pickle library* comes up: \n",
+    "Pickle is used for serializing and de-serializing Python objects. This is a great way to store intermediate results while computing things.\n",
+    "    *dumps()* is how you pickle your data to a bytes sequence\n",
+    "    to use this in other languages you can use *JSON* as encoder and decoder"
    ]
   },
   {
@@ -1518,7 +1561,8 @@
     "    if not final_reduce_n_channel:\n",
     "      model = unetModel(final_reduce=False)\n",
     "    else:\n",
-    "      #round to the closes lower integer devisible by 3, 3 is the number of classes\n",
+    "      #round to the closes lower integer devisible by 3, 3 is the number of classes \n",
+    "      # K: divide the number by 3 and then create a integer out of it (Ganzzahl, round down or up)\n",
     "      final_reduce_n_channel = int((final_reduce_n_channel // 3) * 3)\n",
     "      model = unetModel(final_reduce=True,final_reduce_n_channel=final_reduce_n_channel)\n",
     "\n",
@@ -1536,7 +1580,7 @@
     "    loss = history.history['val_loss'][-1]\n",
     "    hst_dmp = pickle.dumps(history.history)\n",
     "\n",
-    "    if loss < best_loss[0]:\n",
+    "    if loss < best_loss[0]: # if loss smaller than best_loss; loss = best_loss and please get me the weights and json\n",
     "      best_loss[0] = loss\n",
     "      model_weights_dmp = pickle.dumps(model.get_weights())\n",
     "      model_json_dmp = pickle.dumps(model.to_json())\n",
@@ -1595,13 +1639,14 @@
     }
    ],
    "source": [
-    "space = hp.quniform('quniform', 3, 120,0.8)\n",
+    "space = hp.quniform('quniform', 3, 120,0.8) # defines the search space, in which fmin can search\n",
+    "# (label, low, high, q), returns a value like round(uniform(low,high)/q)*q\n",
     "\n",
-    "trials = Trials()\n",
+    "trials = Trials() # default database\n",
     "\n",
-    "best = fmin(objective(epochs=10),\n",
+    "best = fmin(objective(epochs=10), # objective adds special key-value pairs for optimizing the algorithm\n",
     "    space=space,\n",
-    "    algo=tpe.suggest,\n",
+    "    algo=tpe.suggest, # search algorithm\n",
     "    max_evals=80,\n",
     "    trials=trials)\n",
     "\n",
