--- a/1.0-Unet-Engineering.ipynb
+++ b/1.0-Unet-Engineering.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# SpaceNet U-Net"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This notebook is orginal from Boggis30 named 'SpaceNetUnet'. URL: https://github.com/boggis30/SpaceNetUnet\n",
     "I added some comments to better understand the code "
    ]
@@ -1539,7 +1546,14 @@
     "First time *pickle library* comes up: \n",
     "Pickle is used for serializing and de-serializing Python objects. This is a great way to store intermediate results while computing things.\n",
     "    *dumps()* is how you pickle your data to a bytes sequence\n",
-    "    to use this in other languages you can use *JSON* as encoder and decoder"
+    "    to use this in other languages. You can use *JSON* as encoder and decoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> *In other words, to use Hyperopt, I first needed to define an hyperparameter space, such as the range for which the learning rate can vary, the number of layers, the number of neurons in height, width and depth in the layers, how are the layers stacked, and on. Then running hyperopt takes time, but it proceeds to do what could be compared to using genetic algorithms to perform breeding and natural selection, except that there is no breeding here: just a readjustment from the past trials to try new trials in a way that balances exploration of new architectures versus optimization of the architecture near local maximas of performance. https://medium.com/vooban-ai/satellite-image-segmentation-a-workflow-with-u-net-7ff992b2a56e*"
    ]
   },
   {
@@ -1644,11 +1658,11 @@
     "\n",
     "trials = Trials() # default database\n",
     "\n",
-    "best = fmin(objective(epochs=10), # objective adds special key-value pairs for optimizing the algorithm\n",
+    "best = fmin(objective(epochs=10), # objective adds special key-value pairs for optimizing the algorithm, loss function to minimize? \n",
     "    space=space,\n",
-    "    algo=tpe.suggest, # search algorithm\n",
+    "    algo=tpe.suggest, # search algorithm, tree-structured Parzen Estimator\n",
     "    max_evals=80,\n",
-    "    trials=trials)\n",
+    "    trials=trials) # by passing in a trials object directly, we can inspect all of the return values that were calculated during the experiment\n",
     "\n",
     "print(best)"
    ]
@@ -1694,7 +1708,7 @@
     "n_chns = []\n",
     "losses = []\n",
     "for i in range(len(trials.trials)):\n",
-    "  n_chn = trials.trials[i]['misc']['vals']['quniform']\n",
+    "  n_chn = trials.trials[i]['misc']['vals']['quniform'] # trials.trials = list of dictionaries representing everything about the search\n",
     "  if not n_chn:\n",
     "    n_chn = [-1]\n",
     "\n",
@@ -1704,8 +1718,8 @@
     "\n",
     "plt.figure(figsize=(18,6))\n",
     "\n",
-    "best_loss_index = np.argmin(losses)\n",
-    "best_loss = losses[best_loss_index]\n",
+    "best_loss_index = np.argmin(losses) # argmin returns indices of minimum value [which position in list!]\n",
+    "best_loss = losses[best_loss_index] # here: take indices of minium values as best loss = minimum loss\n",
     "best_loss_nch = n_chns[best_loss_index]\n",
     "\n",
     "plt.plot(best_loss_nch,best_loss,color='r', marker='o', markersize=20)\n",
@@ -1776,7 +1790,8 @@
     }
    ],
    "source": [
-    "_ = validate_image(img_val,mask_val,best_model)"
+    "_ = validate_image(img_val,mask_val,best_model)\n",
+    "# 1: img  2: mask  3: mask_prediction hyperopt model  4: mask_pred_rend hyperopt model"
    ]
   },
   {
@@ -1841,6 +1856,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "precision = True Positive / (True Positive + False Positive) OR True Positive / Total predicted Positive\n",
+    "\n",
+    "recall = True Positive / (True Positive + False Negative) OR  True Positive / Total actual Positive\n",
+    "\n",
+    "f1 = 2x (precision x recall)/ (precision + recall)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -1895,10 +1921,11 @@
    ],
    "source": [
     "for i in range(3):\n",
-    "  prec = cfm[i,1,1]/(cfm[i,1,1]+cfm[i,0,1])\n",
+    "  prec = cfm[i,1,1]/(cfm[i,1,1]+cfm[i,0,1]) \n",
     "  recall= cfm[i,1,1]/(cfm[i,1,1]+cfm[i,1,0])\n",
     "  f1  = 2*prec*recall/(prec+recall)\n",
-    "  print('F1 score for class {} :'.format(i),f1)"
+    "  print('F1 score for class {} :'.format(i),f1) \n",
+    "# I do not understand which class is what!"
    ]
   },
   {
