--- a/1.0-Unet-Engineering.ipynb
+++ b/1.0-Unet-Engineering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SpaceNet U-Net"
+    "# SpaceNet U-Net_ modified by Jonas"
    ]
   },
   {
@@ -1983,7 +1983,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
